--- a/react/package.json
+++ b/react/package.json
@@ -5,7 +5,7 @@
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "http-server"
+    "start": "http-server -p 9000"
   },
   "author": "",
   "license": "ISC",
