--- a/ES6/package.json
+++ b/ES6/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "es6",
+  "name": "react",
   "version": "1.0.0",
   "description": "",
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "index.html"
+    "start": "http-server -p 9000"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-latest": "^6.24.1"
-  }
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "http-server": "^0.10.0"
+  },
+  "presets": [
+    "env"
+  ]
 }
