--- a/ES6/3.7_stopwatch_react/package.json
+++ b/ES6/3.7_stopwatch_react/package.json
@@ -5,7 +5,7 @@
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel script.js --out-file script-compiled.js",
+    "start": "http-server -p 9000",
     "build": "babel script.js --watch --out-file build.js"
   },
   "author": "",
