--- a/webpack/4.4_loadery/package.json
+++ b/webpack/4.4_loadery/package.json
@@ -16,6 +16,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
+    "html-webpack-plugin": "^2.29.0",
+    "optimize-js-plugin": "0.0.4",
     "style-loader": "^0.18.2",
     "webpack": "^3.4.0",
     "webpack-dev-server": "^2.6.1"
