--- a/webpack/4.4_loadery/package.json
+++ b/webpack/4.4_loadery/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack"
+    "build": "NODE_ENV=production webpack",
+    "start": "webpack-dev-server --inline --hot --config ./webpack.config.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "css-loader": "^0.28.4",
     "html-webpack-plugin": "^2.29.0",
     "optimize-js-plugin": "0.0.4",
+    "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.4.0",
     "webpack-dev-server": "^2.6.1"
