--- a/chat/package.json
+++ b/chat/package.json
@@ -5,25 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cross-env NODE_ENV=production webpack",
-    "start": "webpack-dev-server --inline --hot --config ./webpack.config.js"
+    "build": "webpack",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.4",
-    "html-webpack-plugin": "^2.29.0",
-    "optimize-js-plugin": "0.0.4",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.4.0",
-    "webpack-dev-server": "^2.6.1"
-  },
   "dependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
