--- a/express/5.8_project/package.json
+++ b/express/5.8_project/package.json
@@ -20,6 +20,7 @@
     "express": "^4.14.1",
     "express-session": "^1.11.3",
     "forms": "^1.3.0",
+    "mongoose": "^4.11.10",
     "morgan": "^1.8.1",
     "passport": "^0.3.0",
     "passport-auth0": "^0.6.0",
